@@ -3,7 +3,8 @@ Changes
 
 0.00013
   * Change all_* accessors back to what they were in 0.00011
-  * Separate out BerkeleyDB tests
+  * Separate out BerkeleyDB tests, fix them
+  * 
 
 0.00012 22 Mar 2010
   * Remove the use of AttributeHelpers -- doing this in Moose/Mouse is a pain
